apps/staging/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only - DNS in CF pointing to local IP
    - host: pihole.milanoid.net # subdomain of my cloudflare domain
      http:
        paths:
          - backend:
              service:
                name: pihole-web
                port:
                  number: 80
            path: /
            pathType: Prefix
